--- a/Resources/view/admin/index/pc/part.html.twig
+++ b/Resources/view/admin/index/pc/part.html.twig
@@ -16,7 +16,7 @@
         </div>
 
         <div class="w-100">
-            <strong>{{ opens.categoryName }}: </strong> &nbsp;
+            <strong>{{ opens.categoryName ?: 'Без категории' }}: </strong> &nbsp;
             <small class="opacity-50">
                 последний добавленный продукт</small>
         </div>
