--- a/Resources/view/admin/application/newedit/_form/pc/form.html.twig
+++ b/Resources/view/admin/application/newedit/_form/pc/form.html.twig
@@ -84,8 +84,7 @@
                     attr: {
                         value : form.product_data[loop.index0].vars.value.total ?:1,
                         class : 'form-control-lg mx-1 rounded-3 total text-center manufacture_part_products_form_total',
-                        style: 'width: 85px;',
-                        'data-max' :  form.product_data[loop.index0].vars.value.total ?:99,
+                        style: 'width: 85px;'
                     }
 
                 }) }}
