--- a/Resources/view/admin/index/pc/card.html.twig
+++ b/Resources/view/admin/index/pc/card.html.twig
@@ -8,7 +8,7 @@
     {% set priority_style = item.priority ? 'border-danger bg-danger' : 'border-primary bg-primary' %}
 
     <div class="border-bottom border-4 rounded-4 {{ priority_style }} ">
-        <div class="card bg-light-primary rounded-4" >
+        <div class="card bg-light-primary rounded-4">
 
             {% set product_image = item.ProductRootImages %}
 
@@ -18,21 +18,36 @@
             {% endif %}
 
 
-            <div class="card-body p-2">
+            <div class="card-body p-2 d-flex justify-content-between">
                 {# <div class="d-flex align-items-center small" style="justify-content: end;">
                 #}{#                    {{ item.status }} #}{#
-                    {% set output_status =  item.status == 'new' ? 'открыта' : 'завершена' %}
-                    {% set output_bg =  item.status == 'new' ? 'bg-primary' : 'bg-secondary' %}
+                {% set output_status =  item.status == 'new' ? 'открыта' : 'завершена' %}
+                {% set output_bg =  item.status == 'new' ? 'bg-primary' : 'bg-secondary' %}
 
-                    <div></div>
+                <div></div>
 
-                    <div class="fw-bolder m-1 {{ output_bg }} px-1 rounded-1" style="color: #fff;">
-                       <span>{{ output_status }}</span>&nbsp;
+                <div class="fw-bolder m-1 {{ output_bg }} px-1 rounded-1" style="color: #fff;">
+                   <span>{{ output_status }}</span>&nbsp;
 
-                        <span>{{ item.productTotalCompleted ? '(' ~ item.productTotalCompleted ~ ')' : '' }}</span>
-                    </div>
+                    <span>{{ item.productTotalCompleted ? '(' ~ item.productTotalCompleted ~ ')' : '' }}</span>
+                </div>
 
-                </div> #}
+            </div> #}
+
+                <div>
+                    &nbsp;
+                </div>
+
+                <div class="d-flex align-items-center gap-1 text-primary pointer copy"
+                     data-copy="{{ item.productArticle }}">
+
+                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="14"
+                         height="14" fill="currentColor" viewBox="0 0 115.77 122.88">
+                        <path d="M89.62,13.96v7.73h12.19h0.01v0.02c3.85,0.01,7.34,1.57,9.86,4.1c2.5,2.51,4.06,5.98,4.07,9.82h0.02v0.02 v73.27v0.01h-0.02c-0.01,3.84-1.57,7.33-4.1,9.86c-2.51,2.5-5.98,4.06-9.82,4.07v0.02h-0.02h-61.7H40.1v-0.02 c-3.84-0.01-7.34-1.57-9.86-4.1c-2.5-2.51-4.06-5.98-4.07-9.82h-0.02v-0.02V92.51H13.96h-0.01v-0.02c-3.84-0.01-7.34-1.57-9.86-4.1 c-2.5-2.51-4.06-5.98-4.07-9.82H0v-0.02V13.96v-0.01h0.02c0.01-3.85,1.58-7.34,4.1-9.86c2.51-2.5,5.98-4.06,9.82-4.07V0h0.02h61.7 h0.01v0.02c3.85,0.01,7.34,1.57,9.86,4.1c2.5,2.51,4.06,5.98,4.07,9.82h0.02V13.96L89.62,13.96z M79.04,21.69v-7.73v-0.02h0.02 c0-0.91-0.39-1.75-1.01-2.37c-0.61-0.61-1.46-1-2.37-1v0.02h-0.01h-61.7h-0.02v-0.02c-0.91,0-1.75,0.39-2.37,1.01 c-0.61,0.61-1,1.46-1,2.37h0.02v0.01v64.59v0.02h-0.02c0,0.91,0.39,1.75,1.01,2.37c0.61,0.61,1.46,1,2.37,1v-0.02h0.01h12.19V35.65 v-0.01h0.02c0.01-3.85,1.58-7.34,4.1-9.86c2.51-2.5,5.98-4.06,9.82-4.07v-0.02h0.02H79.04L79.04,21.69z M105.18,108.92V35.65v-0.02 h0.02c0-0.91-0.39-1.75-1.01-2.37c-0.61-0.61-1.46-1-2.37-1v0.02h-0.01h-61.7h-0.02v-0.02c-0.91,0-1.75,0.39-2.37,1.01 c-0.61,0.61-1,1.46-1,2.37h0.02v0.01v73.27v0.02h-0.02c0,0.91,0.39,1.75,1.01,2.37c0.61,0.61,1.46,1,2.37,1v-0.02h0.01h61.7h0.02 v0.02c0.91,0,1.75-0.39,2.37-1.01c0.61-0.61,1-1.46,1-2.37h-0.02V108.92L105.18,108.92z"></path>
+                    </svg>
+
+                    <small>{{ item.productArticle }}</small>
+                </div>
             </div>
 
             <div class="d-flex flex-column small gap-1 p-2 bg-cover lazy col-2 w-100"
@@ -46,7 +61,7 @@
                 <span class="fw-bolder mb-1 text-dark text-decoration-none product-name">{{ item.productName }}</span>
 
 
-                <div class="text-muted fw-bolder">
+                <div class="text-muted fw-bolder mb-1">
                     {# Значение множественного варианта ТП #}
                     {{ item.productVariationValue|call_twig_func(item.productVariationReference~'_render') ~
                     item.productModificationValue|call_twig_func(item.productModificationReference~'_render') }}
@@ -72,6 +87,7 @@
                     <strong>{{ item.actionName }}</strong>
                 </div> #}
 
+
                 <div class="mb-1">
                     <span class="opacity-50 small">Ответственный:</span> &nbsp;
                     <strong> {{ item.usersProfileUsername }}</strong>
@@ -81,8 +97,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div>
-                        <span class="opacity-50">Количество:</span> &nbsp;
-                        <strong> {{ item.productTotal }}</strong> шт.
+                        <span class="opacity-50 small">Количество:</span> &nbsp;
+                        <strong>{{ item.productTotal }}</strong> шт.
                     </div>
 
                     {% if is_granted('ROLE_MANUFACTURE_PART_ADD') or  is_granted('ROLE_ADMIN') %}
@@ -111,20 +127,20 @@
                            data-formname="{{ add_selected_product_form_name }}"
                            data-product="{{ item.productId }}"
 
-{#                           data-offer="{{ opens.actionsOfferOffer ? item.productOfferId : '' }}"#}
-{#                           data-variation="{{ opens.actionsOfferVariation ? item.productVariationId : '' }}"#}
-{#                           data-modification="{{ opens.actionsOfferModification ? item.productModificationId : '' }}"#}
+{#                           data-offer="{{ opens.actionsOfferOffer ? item.productOfferId : '' }}" #}
+                                {#                           data-variation="{{ opens.actionsOfferVariation ? item.productVariationId : '' }}" #}
+                                {#                           data-modification="{{ opens.actionsOfferModification ? item.productModificationId : '' }}" #}
 
 
-                           {% if opens.actionsOfferOffer  %}
-                               data-offer="{{ item.productOfferId }}"
-                           {% endif  %}
-                            {% if opens.actionsOfferVariation  %}
-                               data-variation="{{ item.productVariationId }}"
-                           {% endif  %}
-                                {% if opens.actionsOfferModification  %}
-                               data-modification="{{ item.productModificationId }}"
-                           {% endif  %}
+                                {% if opens.actionsOfferOffer %}
+                                    data-offer="{{ item.productOfferId }}"
+                                {% endif %}
+                                {% if opens.actionsOfferVariation %}
+                                    data-variation="{{ item.productVariationId }}"
+                                {% endif %}
+                                {% if opens.actionsOfferModification %}
+                                    data-modification="{{ item.productModificationId }}"
+                                {% endif %}
 
                            data-manufacture_application_product_event="{{ item.ManufactureApplicationEvent }}"
 
