--- a/Resources/view/admin/index/template.html.twig
+++ b/Resources/view/admin/index/template.html.twig
@@ -53,6 +53,6 @@
 <script nonce='{{ csp_nonce() }}' async  data-src='/assets/{{ version }}/plugins/nice-select2/nice-select2.min.js?v={{ version }}' class='lazy'></script>
 <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/manufacture-part-application/filter.min.js?v={{ version }}" class="lazy"></script>
 <script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/js/radio.input.min.js?v={{ version }}' class='lazy'></script>
-
+<script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/js/copy.min.js?v={{ version }}" class="lazy"></script>
 
 {% endblock %}
