--- a/Resources/view/admin/index/pc/card.html.twig
+++ b/Resources/view/admin/index/pc/card.html.twig
@@ -13,8 +13,11 @@
             {% set product_image = item.ProductRootImages %}
 
             {% set image_path = '/assets/'~version~'/img/blank.svg' %}
+            {% set large_path = false %}
+
             {% if product_image.img_ext is defined and product_image.img_ext is not null %}
                 {% set image_path = cdn_image_path(product_image.img, product_image.img_ext, product_image.img_cdn, 'small') %}
+                {% set large_path = cdn_image_path(product_image.img, product_image.img_ext, product_image.img_cdn, 'large') %}
             {% endif %}
 
 
@@ -50,11 +53,12 @@
                 </div>
             </div>
 
-            <div class="d-flex flex-column small gap-1 p-2 bg-cover lazy col-2 w-100"
+            <a href="{{ large_path ?: '#' }}" {{ large_path ? 'target="_blank"' }}
+               class="zoom-in d-flex flex-column small gap-1 p-2 bg-cover lazy col-2 w-100"
                  style=" height: 200px;"
                  data-bg="{{ image_path }}"
             >
-            </div>
+            </a>
 
             <div class="card-body d-flex flex-column p-2">
 
