Добавляет контроллер для отправки сообщений в Telegram

--- a/Resources/view/admin/index/pc/card.html.twig
+++ b/Resources/view/admin/index/pc/card.html.twig
@@ -238,7 +238,7 @@
                                     title="Сообщение о товаре в Telegram"
                                     class="ms-2"
                             >
-                            <a href="{{ path('telegram-bot:admin.message.telegram') }}"
+                            <a href="{{ path('manufacture-part-application:admin.message.telegram') }}"
                                class="btn-sm btn-primary modal-link rounded-1 disabled"
 
                                data-bs-toggle="modal"
