--- a/Resources/view/admin/index/pc/content.html.twig
+++ b/Resources/view/admin/index/pc/content.html.twig
@@ -110,7 +110,7 @@
 
                             data-formname="{{ telegram_products_info_form_name }}"
 
-                            href="{{ path('telegram-bot:admin.message.telegram') }}"
+                            href="{{ path('manufacture-part-application:admin.message.telegram') }}"
 
                     >
                         Отправить выбранные в Telegram <img class="shadow rounded-5" src="/assets/telegram-bot/img/telegram.svg" alt="telegram">
